[gd_scene load_steps=54 format=3 uid="uid://cl5qeeqx66i6e"]

[ext_resource type="Texture2D" uid="uid://b1h0biuscqvuk" path="res://Assets/Sprites/Enemies/CrystalThugEnemy.png" id="1_1mmkh"]
[ext_resource type="Script" path="res://Objects/Enemies/CrystalThug/crystal_thug.gd" id="1_ablmd"]
[ext_resource type="PackedScene" uid="uid://b0tqftq4kjpsh" path="res://Components/SpriteDirectorComponent/sprite_director_component.tscn" id="1_knvuj"]
[ext_resource type="Script" path="res://Classes/StateMachine.gd" id="2_ckk41"]
[ext_resource type="PackedScene" uid="uid://dlsbtdtj5tk8j" path="res://Components/HealthComponent/health_component.tscn" id="3_75l8a"]
[ext_resource type="Texture2D" uid="uid://cl0ps3s3th5qa" path="res://Assets/Sprites/Effects/CystalThugSlamEffect.png" id="3_j8jhn"]
[ext_resource type="PackedScene" uid="uid://bl4qmgyrutas2" path="res://Components/DeathComponent/death_component.tscn" id="4_vjnph"]
[ext_resource type="Script" path="res://Classes/GenericStates/idle.gd" id="4_y8jj8"]
[ext_resource type="PackedScene" uid="uid://bhj03cicy3xut" path="res://Components/MovementComponent/movement_component.tscn" id="5_oie0v"]
[ext_resource type="Script" path="res://Classes/GenericStates/chase.gd" id="5_t2ije"]
[ext_resource type="Texture2D" uid="uid://43ksgggchcci" path="res://Assets/Sprites/Effects/CrytalThugHeadShatter.png" id="5_upeyw"]
[ext_resource type="PackedScene" uid="uid://dc8ilsyf3576k" path="res://Components/KnockbackComponents/OmniDirectionalKnockbackComponent/omni_directional_knockback_component.tscn" id="6_fdldy"]
[ext_resource type="Script" path="res://Classes/GenericStates/GenericAttackState.gd" id="6_ym6rq"]
[ext_resource type="Script" path="res://Objects/Enemies/CrystalThug/ResonateState.gd" id="7_320lq"]
[ext_resource type="Script" path="res://Classes/GenericStates/parried.gd" id="7_q3md7"]
[ext_resource type="PackedScene" uid="uid://cnqya0851pype" path="res://Components/HurtboxComponent/Hurtbox_component.tscn" id="7_ur35e"]
[ext_resource type="PackedScene" uid="uid://b8t05k375ws5w" path="res://Objects/Projectiles/CrystalResonaceBlast/crystal_resonance_blast_projectile.tscn" id="8_3hch0"]
[ext_resource type="PackedScene" uid="uid://c80slj0a6d2vi" path="res://Components/EnemyHeathbar/enemy_heathbar.tscn" id="8_dugy3"]
[ext_resource type="Script" path="res://Classes/GenericStates/GenericEnemyHackedState.gd" id="8_heh2r"]
[ext_resource type="Script" path="res://Objects/Enemies/CrystalThug/wait.gd" id="9_c0kbi"]
[ext_resource type="PackedScene" uid="uid://brujq4dkn34nd" path="res://Components/ProximityAreaComponent/proximity_area.tscn" id="9_irfdu"]
[ext_resource type="Script" path="res://Classes/GenericStates/dead.gd" id="9_l147m"]
[ext_resource type="PackedScene" uid="uid://o7pe5pdtqa66" path="res://Components/EnemyParriedComponent/enemy_parried_component.tscn" id="10_tifpm"]
[ext_resource type="PackedScene" uid="uid://basi3gkp6u5gf" path="res://Components/AttackComponent/attack_component.tscn" id="11_1ay4a"]
[ext_resource type="PackedScene" uid="uid://bov1lwrx7vmuy" path="res://Components/EnemyHitComponent/enemy_hit_component.tscn" id="12_88n8y"]
[ext_resource type="PackedScene" uid="uid://c50x0ma4r25le" path="res://Objects/Hacks/StateSwitchHack/StateSwitchHack.tscn" id="17_jdngx"]
[ext_resource type="PackedScene" uid="uid://boaqnrhkb5ukt" path="res://Components/VisualEffectComponents/DirectionalHitParticlesComponent/directional_hit_particles_component.tscn" id="27_tgw8o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_id2w4"]
size = Vector2(2, 6)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_e0n24"]
polygon = PackedVector2Array(-1, 2, 1, 2, 1, 7, -1, 7)

[sub_resource type="Animation" id="Animation_wqnno"]
resource_name = "Shatter"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_vnvpn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qtsy3"]
_data = {
"RESET": SubResource("Animation_vnvpn"),
"Shatter": SubResource("Animation_wqnno")
}

[sub_resource type="Animation" id="Animation_6571p"]
resource_name = "Attack"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackComponents/HeadSlam")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"generateAttackID"
}, {
"args": [],
"method": &"enable"
}, {
"args": [],
"method": &"disable"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackComponents/HeadSlam/CrystalExsplotionEffect/CrystalAnimator")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"CrystalExplotion", -1, 1.0, false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_lo1io"]
resource_name = "Death"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [31, 32, 33, 34, 35]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/HeadShatter/HeadShatterAnimator")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"Shatter", -1, 1.0, false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_kuq1r"]
resource_name = "Idle"
length = 1.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_v86cl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_o30gf"]
resource_name = "Resonate"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [36, 37]
}

[sub_resource type="Animation" id="Animation_yoliv"]
resource_name = "Run"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_t37ew"]
resource_name = "Stun"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}

[sub_resource type="Animation" id="Animation_dx0so"]
resource_name = "Wait"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j3vrm"]
_data = {
"Attack": SubResource("Animation_6571p"),
"Death": SubResource("Animation_lo1io"),
"Idle": SubResource("Animation_kuq1r"),
"RESET": SubResource("Animation_v86cl"),
"Resonate": SubResource("Animation_o30gf"),
"Run": SubResource("Animation_yoliv"),
"Stun": SubResource("Animation_t37ew"),
"Wait": SubResource("Animation_dx0so")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xgyyc"]
size = Vector2(2, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_o4fvj"]
radius = 35.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8bijk"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ou38u"]
radius = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yg2ma"]
size = Vector2(20, 4)

[sub_resource type="Animation" id="Animation_qinqg"]
resource_name = "CrystalExplotion"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_6ax11"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o5otb"]
_data = {
"CrystalExplotion": SubResource("Animation_qinqg"),
"RESET": SubResource("Animation_6ax11")
}

[sub_resource type="Gradient" id="Gradient_18u5e"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.635294, 0.239216, 0.545098, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_spdlq"]
gradient = SubResource("Gradient_18u5e")
width = 1
height = 1

[sub_resource type="Gradient" id="Gradient_jc77b"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.776471, 0.317647, 0.592157, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_suhdk"]
gradient = SubResource("Gradient_jc77b")
width = 1
height = 1

[node name="CrystalThug" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 8
collision_mask = 3
script = ExtResource("1_ablmd")
projectile = ExtResource("8_3hch0")

[node name="EnvirementCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_id2w4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("1_1mmkh")
hframes = 38
frame = 1

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite2D"]
modulate = Color(1, 1, 1, 0)
occluder = SubResource("OccluderPolygon2D_e0n24")
occluder_light_mask = 0

[node name="SpriteDirectorComponent" parent="Sprite2D" node_paths=PackedStringArray("spriteToFlip", "velocityToCheck") instance=ExtResource("1_knvuj")]
spriteToFlip = NodePath("..")
velocityToCheck = NodePath("../..")

[node name="HeadShatter" type="Sprite2D" parent="Sprite2D"]
position = Vector2(-0.5, 1.5)
texture = ExtResource("5_upeyw")
hframes = 4
frame = 3

[node name="HeadShatterAnimator" type="AnimationPlayer" parent="Sprite2D/HeadShatter"]
libraries = {
"": SubResource("AnimationLibrary_qtsy3")
}
speed_scale = 2.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "hackedState", "parent")]
script = ExtResource("2_ckk41")
initial_state = NodePath("Idle")
hackedState = NodePath("Hacked")
parent = NodePath("..")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("agroStates", "animator", "playerProximity")]
script = ExtResource("4_y8jj8")
agroStates = [NodePath("../Chase")]
animator = NodePath("../../Animator")
animationName = "Idle"
playerProximity = NodePath("../../Proximities/AgroProximity")

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("idleState", "nextStates", "animator", "deAggroProximity", "attackProximity", "movement", "spriteDirector")]
script = ExtResource("5_t2ije")
speed = 800.0
idleState = NodePath("../Idle")
nextStates = [NodePath("../Wait")]
animator = NodePath("../../Animator")
animationName = "Run"
deAggroProximity = NodePath("../../Proximities/DeAgroProximity")
attackProximity = NodePath("../../Proximities/AttackProximity")
movement = NodePath("../../GeneralComponents/MovementComponent")
spriteDirector = NodePath("../../Sprite2D/SpriteDirectorComponent")

[node name="Wait" type="Node" parent="StateMachine" node_paths=PackedStringArray("spriteDirector", "nextState", "animator")]
script = ExtResource("9_c0kbi")
spriteDirector = NodePath("../../Sprite2D/SpriteDirectorComponent")
nextState = NodePath("../HeadSlam")
length = 0.5
animator = NodePath("../../Animator")
animationName = "Wait"

[node name="HeadSlam" type="Node" parent="StateMachine" node_paths=PackedStringArray("agroState", "parryState", "animator", "attackComponents", "nodeToFlip", "parent", "movement")]
script = ExtResource("6_ym6rq")
attackLength = 1.5
animationName = "Attack"
agroState = NodePath("../Chase")
parryState = NodePath("../Stun")
animator = NodePath("../../Animator")
attackComponents = [NodePath("../../AttackComponents/HeadSlam")]
nodeToFlip = NodePath("../../AttackComponents/HeadSlam")
parent = NodePath("../..")
movement = NodePath("../../GeneralComponents/MovementComponent")
movementPeriods = Array[Vector3]([Vector3(0.7, 0.8, 240)])

[node name="Resonate" type="Node" parent="StateMachine" node_paths=PackedStringArray("healthComponent", "parent", "nextState", "parrent", "animator", "movement", "kbCom")]
script = ExtResource("7_320lq")
healthComponent = NodePath("../../GeneralComponents/HealthComponent")
projectileScene = ExtResource("8_3hch0")
parent = NodePath("../..")
parryLength = 9999.9
animationName = "Resonate"
knockback = 100.0
nextState = NodePath("../Death")
parrent = NodePath("../..")
animator = NodePath("../../Animator")
movement = NodePath("../../GeneralComponents/MovementComponent")
kbCom = NodePath("../../GeneralComponents/OmniDirectionalKnockbackComponent")

[node name="Stun" type="Node" parent="StateMachine" node_paths=PackedStringArray("nextState", "parrent", "animator", "movement", "kbCom")]
script = ExtResource("7_q3md7")
parryLength = 0.3
animationName = "Stun"
nextState = NodePath("../Chase")
parrent = NodePath("../..")
animator = NodePath("../../Animator")
movement = NodePath("../../GeneralComponents/MovementComponent")
kbCom = NodePath("../../GeneralComponents/OmniDirectionalKnockbackComponent")

[node name="Hacked" type="Node" parent="StateMachine" node_paths=PackedStringArray("stateMachine", "parent", "movement", "nextState", "leftGrabPos", "rightGrabPos", "animationPlayer", "spriteDirectorComponent")]
script = ExtResource("8_heh2r")
stateMachine = NodePath("..")
parent = NodePath("../..")
movement = NodePath("../../GeneralComponents/MovementComponent")
nextState = NodePath("../Chase")
leftGrabPos = NodePath("LeftGrabPos")
rightGrabPos = NodePath("RightGrabPos")
animationName = "Stun"
animationPlayer = NodePath("../../Animator")
spriteDirectorComponent = NodePath("../../Sprite2D/SpriteDirectorComponent")

[node name="LeftGrabPos" type="Marker2D" parent="StateMachine/Hacked"]

[node name="RightGrabPos" type="Marker2D" parent="StateMachine/Hacked"]

[node name="Death" type="Node" parent="StateMachine" node_paths=PackedStringArray("animator", "hurtboxesToDisable")]
script = ExtResource("9_l147m")
animator = NodePath("../../Animator")
animationName = "Death"
hurtboxesToDisable = [NodePath("../../GeneralComponents/HurtboxComponent")]

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j3vrm")
}

[node name="GeneralComponents" type="Node2D" parent="."]

[node name="HealthComponent" parent="GeneralComponents" instance=ExtResource("3_75l8a")]

[node name="DeathComponent" parent="GeneralComponents" node_paths=PackedStringArray("healthComponent", "stateMachine", "stateToSwitchTo") instance=ExtResource("4_vjnph")]
healthComponent = NodePath("../HealthComponent")
stateMachine = NodePath("../../StateMachine")
stateToSwitchTo = NodePath("../../StateMachine/Death")

[node name="MovementComponent" parent="GeneralComponents" node_paths=PackedStringArray("parent") instance=ExtResource("5_oie0v")]
parent = NodePath("../..")
gravity = 10.0

[node name="OmniDirectionalKnockbackComponent" parent="GeneralComponents" node_paths=PackedStringArray("parent", "movement") instance=ExtResource("6_fdldy")]
parent = NodePath("../..")
movement = NodePath("../MovementComponent")

[node name="HurtboxComponent" parent="GeneralComponents" node_paths=PackedStringArray("stateMachine", "health_componnet") instance=ExtResource("7_ur35e")]
collision_layer = 8
stateMachine = NodePath("../../StateMachine")
health_componnet = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GeneralComponents/HurtboxComponent"]
visible = false
shape = SubResource("RectangleShape2D_xgyyc")

[node name="EnemyHeathbar" parent="GeneralComponents" node_paths=PackedStringArray("parent", "follow", "healthComponent", "hackCommands", "stateMachine") instance=ExtResource("8_dugy3")]
parent = NodePath("../..")
follow = NodePath("../EnemyHealthbarMarker")
healthComponent = NodePath("../HealthComponent")
hackCommands = [NodePath("Resonance"), NodePath("HeadShatter")]
stateMachine = NodePath("../../StateMachine")

[node name="Resonance" parent="GeneralComponents/EnemyHeathbar" node_paths=PackedStringArray("stateMachine", "stateToSwitchTo", "enemyHealthbar", "healthComponent") instance=ExtResource("17_jdngx")]
stateMachine = NodePath("../../../StateMachine")
stateToSwitchTo = NodePath("../../../StateMachine/Resonate")
removeAfterExecuted = true
enemyHealthbar = NodePath("..")
cost = 3.0
hackName = "Resonate"
healthComponent = NodePath("../../HealthComponent")

[node name="HeadShatter" parent="GeneralComponents/EnemyHeathbar" node_paths=PackedStringArray("stateMachine", "stateToSwitchTo", "enemyHealthbar", "healthComponent") instance=ExtResource("17_jdngx")]
stateMachine = NodePath("../../../StateMachine")
stateToSwitchTo = NodePath("../../../StateMachine/Death")
removeAfterExecuted = true
enemyHealthbar = NodePath("..")
cost = 3.0
hackName = "Shatter"
healthComponent = NodePath("../../HealthComponent")

[node name="EnemyHealthbarMarker" type="Marker2D" parent="GeneralComponents"]
position = Vector2(0, 1)

[node name="Proximities" type="Node2D" parent="."]

[node name="AgroProximity" parent="Proximities" instance=ExtResource("9_irfdu")]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Proximities/AgroProximity"]
visible = false
shape = SubResource("CircleShape2D_o4fvj")

[node name="DeAgroProximity" parent="Proximities" instance=ExtResource("9_irfdu")]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Proximities/DeAgroProximity"]
visible = false
shape = SubResource("CircleShape2D_8bijk")

[node name="AttackProximity" parent="Proximities" instance=ExtResource("9_irfdu")]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Proximities/AttackProximity"]
visible = false
shape = SubResource("CircleShape2D_ou38u")

[node name="AttackComponents" type="Node2D" parent="."]

[node name="EnemyParriedComponent" parent="AttackComponents" node_paths=PackedStringArray("attackComponents", "stateMachine") instance=ExtResource("10_tifpm")]
attackComponents = [NodePath("../HeadSlam")]
stateMachine = NodePath("../../StateMachine")

[node name="HeadSlam" parent="AttackComponents" node_paths=PackedStringArray("collisionShape", "healthComponent") instance=ExtResource("11_1ay4a")]
collision_mask = 4
attackName = "CrystalThugHeadSlam"
collisionShape = NodePath("CollisionShape2D")
healthComponent = NodePath("../../GeneralComponents/HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackComponents/HeadSlam"]
visible = false
position = Vector2(-4, 1)
shape = SubResource("RectangleShape2D_yg2ma")

[node name="CrystalExsplotionEffect" type="Sprite2D" parent="AttackComponents/HeadSlam"]
position = Vector2(-4, 0.5)
texture = ExtResource("3_j8jhn")
hframes = 4
frame = 3

[node name="CrystalAnimator" type="AnimationPlayer" parent="AttackComponents/HeadSlam/CrystalExsplotionEffect"]
libraries = {
"": SubResource("AnimationLibrary_o5otb")
}

[node name="OnHitComponent" parent="." node_paths=PackedStringArray("healthComponent", "hitEffects", "knockbackComponent") instance=ExtResource("12_88n8y")]
healthComponent = NodePath("../GeneralComponents/HealthComponent")
hitEffects = [NodePath("DirectionalParticlesComponent"), NodePath("DirectionalParticlesComponent2")]
knockbackComponent = NodePath("../GeneralComponents/OmniDirectionalKnockbackComponent")

[node name="DirectionalParticlesComponent" parent="OnHitComponent" instance=ExtResource("27_tgw8o")]
texture = SubResource("GradientTexture2D_spdlq")

[node name="DirectionalParticlesComponent2" parent="OnHitComponent" instance=ExtResource("27_tgw8o")]
amount = 4
texture = SubResource("GradientTexture2D_suhdk")

[node name="ResonanceTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="ResonanceCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ResonanceTimer" to="." method="_on_resonance_timer_timeout"]
[connection signal="timeout" from="ResonanceCooldown" to="." method="_on_resonance_cooldown_timeout"]
